--- a/frontend/src/assets/scss/_global.scss
+++ b/frontend/src/assets/scss/_global.scss
@@ -37,3 +37,14 @@ main{
     flex-direction: column;
     align-items: center;
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+    background: #292b2f;
+    cursor: pointer;
+  }
+  
+::-webkit-scrollbar-thumb {
+background: #36393f;
+border-radius: 3px;
+}
