--- a/frontend/src/pages/Root/styles.scss
+++ b/frontend/src/pages/Root/styles.scss
@@ -3,12 +3,15 @@
     //justify-content: center;
     padding: 20px 0;
     align-items: center;
-    .user-inffo{
+    .user-info{
         width: 80%;
         background-color: $dark1;
         padding: 20px 0;
-        justify-content: center;
-        .inffo-identification{
+        align-items: center;
+        flex-direction: column;
+        .info-identification{
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
             background-color: $dark2;
             //padding: 10px;
             width: 80%;
@@ -22,6 +25,7 @@
                     height: 100px;
                     border-radius: 50%;
                     overflow: hidden;
+                    
                     img{
                         width: 100%;
                         height: 100%;
@@ -40,14 +44,204 @@
                 }
             }
         }
-        .inffo-data{
-
+        .info-data{
+            width: 80%;
+            background-color: $dark1;
+            padding-top: 10px;
+            justify-content: center;
+            .data-bc{
+                background-color: $dark2;
+                width: 100%;
+                flex-direction: row;
+                padding: 5px 10px;
+                span{
+                    color: #d6d7d9;
+                    opacity: 0.9;
+                    padding-left: 10px;
+                    display: flex;
+                    align-items: center;
+                }
+                .primary{
+                    background-color: #36393f;
+                }
+                .secondary{
+                    background-color: #292b2f;
+                }
+                .bc-itens{
+                    flex-direction: column;
+                    width: 50%;
+                    
+                    div{
+                        height: 25px;
+                    }
+                }
+                .bc-itens:nth-child(1){
+                    border-left: solid 5px #5865f2;
+                    border-right: solid 2.5px #5865f2;
+                }
+                .bc-itens:nth-child(2){
+                    border-right: solid 5px #5865f2;
+                    border-left: solid 2.5px #5865f2;
+                }
+            }
         }
     }
     .user-server{
-
+        width: 80%;
+        background-color: $dark1;
+        padding-top: 20px;
+        margin-top: 20px;
+        align-items: center;
+        flex-direction: column;
+        .server-bc{
+            overflow: hidden;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            margin-bottom: 20px;
+            .bc-server{
+                background-color: $dark2;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;  
+                width: 100%;
+                div{
+                    height: 80px;
+                    justify-content: center;
+                    align-items: center;
+                    span{
+                        color: $corspan;
+                    }
+                }
+                .server-icon{
+                    width: 10%;
+                    svg{
+                    }
+                    .Online{
+                        color: $Online;
+                    }
+                    .Offline{
+                        color: $Offline;
+                    }
+                    .Unavailable{
+                        color: $Unavailable;
+                    }
+                }
+                .server-date{
+                    width: 30%;
+                    span{
+                        user-select: none;
+                        cursor: pointer;
+                    }
+                    .Online{
+                        color: $Online;     
+                    }
+                    .Offline{
+                        color: $Offline; 
+                    }
+                    .Unavailable{
+                        color: $Unavailable;
+                    }
+                }
+                .server-upddate{
+                    width: 30%;
+                    span{
+                        color: $corbutton;
+                        user-select: none;
+                        cursor: pointer;
+                        &:hover{
+                            color: #2435f3;
+                        }
+                    }
+                }
+                .server-button{
+                    width: 30%;
+                    .Offline, .Unavailable{
+                        background-color: #00000000;
+                        border: none;
+                        color: $corspan;
+                        opacity: .5;
+                        padding: 8px 15px;
+                        font-size: 16px;
+                        font-weight: 500;
+                        cursor: not-allowed;
+                        user-select: none;                     
+                    }
+                    .Online{                       
+                        background-color: $corverde;
+                        color: $corspan;
+                        cursor: pointer;
+                        border: none;
+                        border-radius: 5px;
+                        padding: 8px 15px;
+                        font-size: 16px;
+                        font-weight: 500;
+                    }
+                    .Online:hover{
+                        background-color: #1e8d38;
+                        color: white;
+                    }
+                }
+            }
+            .bc-info{
+                background-color: $dark3;
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+                transition: .5s;
+                justify-content: center;
+                overflow: hidden;
+                width: 98%;
+                height: 0;
+                div{
+                    justify-content: center;
+                    align-items: center;
+                    span{
+                        color: $corspan;
+                    }
+                }
+                .info-price{
+                    width: 20%;
+                    span{
+                        color: $Online;
+                    }
+                }
+                .info-date{
+                    width: 30%;
+                    span{
+                        opacity: .8;
+                    }
+                }
+                .info-time{
+                    width: 30%;
+                    span{
+                    }
+                }
+                .info-button{
+                    width: 20%;
+                    span{
+                        color: $corbutton;
+                        //text-decoration: underline;
+                        cursor: pointer;
+                        &:hover{
+                            color: #4251f3;
+                        }
+                    }
+                }
+            }
+        }
     }
     .user-bank{
 
+    }
+}
+.Loading{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    span{
+        color: $corspan;
+        font-size: 20px;
+        font-weight: 600;
     }
 }
